~fix set env variables

--- a/.github/workflows/deploy-to-github-pages.yml
+++ b/.github/workflows/deploy-to-github-pages.yml
@@ -34,3 +34,6 @@ jobs:
       
       - name: build static resources
         run: npm run build
+        env:
+          GH_API_TOKEN: ${GH_API_TOKEN}
+          GH_USER_NAME: ${GH_USER_NAME}
