--- a/vite-manifest.json
+++ b/vite-manifest.json
@@ -1,58 +1,19 @@
 {
   "src/routes/+layout.css": {
-    "file": "_app/immutable/assets/_layout-93112f4d.css",
+    "file": "_app/immutable/assets/_layout-6196db47.css",
     "src": "src/routes/+layout.css"
-  },
-  "src/routes/+page.svelte": {
-    "file": "_app/immutable/components/pages/_page.svelte-77352248.js",
-    "src": "src/routes/+page.svelte",
-    "isEntry": true,
-    "imports": [
-      "_index-d021e39d.js",
-      "_marked.esm-0b02a870.js"
-    ]
-  },
-  "_singletons-4c1157cc.js": {
-    "file": "_app/immutable/chunks/singletons-4c1157cc.js",
-    "imports": [
-      "_paths-6e6c7ca4.js"
-    ]
-  },
-  ".svelte-kit/generated/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-49362b13.js",
-    "src": ".svelte-kit/generated/nodes/1.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "node_modules/@sveltejs/kit/src/runtime/components/error.svelte"
-    ]
-  },
-  ".svelte-kit/generated/nodes/3.js": {
-    "file": "_app/immutable/chunks/3-09db1c9d.js",
-    "src": ".svelte-kit/generated/nodes/3.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "src/routes/posts/[issue_id]/+page.svelte"
-    ]
-  },
-  ".svelte-kit/generated/nodes/2.js": {
-    "file": "_app/immutable/chunks/2-f750e983.js",
-    "src": ".svelte-kit/generated/nodes/2.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "src/routes/+page.svelte"
-    ]
   },
   "__layout-da46b06b.js": {
     "file": "_app/immutable/chunks/_layout-da46b06b.js"
   },
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-1f0e3bda.js",
+    "file": "_app/immutable/start-6b284996.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_index-d021e39d.js",
-      "_singletons-4c1157cc.js",
-      "_paths-6e6c7ca4.js"
+      "_index-fdef72cc.js",
+      "_singletons-c41d2f92.js",
+      "_paths-b4419565.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/nodes/0.js",
@@ -61,26 +22,30 @@
       ".svelte-kit/generated/nodes/3.js"
     ]
   },
-  "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "_app/immutable/components/error.svelte-15d5d65d.js",
-    "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
-    "isEntry": true,
+  ".svelte-kit/generated/nodes/1.js": {
+    "file": "_app/immutable/chunks/1-3c2bfbee.js",
+    "src": ".svelte-kit/generated/nodes/1.js",
+    "isDynamicEntry": true,
     "imports": [
-      "_index-d021e39d.js",
-      "_singletons-4c1157cc.js"
+      "node_modules/@sveltejs/kit/src/runtime/components/error.svelte"
     ]
   },
-  "_marked.esm-0b02a870.js": {
-    "file": "_app/immutable/chunks/marked.esm-0b02a870.js"
-  },
-  "_paths-6e6c7ca4.js": {
-    "file": "_app/immutable/chunks/paths-6e6c7ca4.js",
+  ".svelte-kit/generated/nodes/0.js": {
+    "file": "_app/immutable/chunks/0-9cde4a54.js",
+    "src": ".svelte-kit/generated/nodes/0.js",
+    "isDynamicEntry": true,
     "imports": [
-      "_index-d021e39d.js"
+      "__layout-da46b06b.js",
+      "src/routes/+layout.svelte"
     ]
   },
-  "_index-d021e39d.js": {
-    "file": "_app/immutable/chunks/index-d021e39d.js"
+  ".svelte-kit/generated/nodes/2.js": {
+    "file": "_app/immutable/chunks/2-e3371c13.js",
+    "src": ".svelte-kit/generated/nodes/2.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "src/routes/+page.svelte"
+    ]
   },
   "src/routes/+layout.js": {
     "file": "_app/immutable/modules/pages/_layout.js-9cbb603b.js",
@@ -90,34 +55,71 @@
       "__layout-da46b06b.js"
     ]
   },
-  ".svelte-kit/generated/nodes/0.js": {
-    "file": "_app/immutable/chunks/0-67994e8e.js",
-    "src": ".svelte-kit/generated/nodes/0.js",
+  ".svelte-kit/generated/nodes/3.js": {
+    "file": "_app/immutable/chunks/3-bf3caba4.js",
+    "src": ".svelte-kit/generated/nodes/3.js",
     "isDynamicEntry": true,
     "imports": [
-      "__layout-da46b06b.js",
-      "src/routes/+layout.svelte"
+      "src/routes/posts/[issue_id]/+page.svelte"
+    ]
+  },
+  "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
+    "file": "_app/immutable/components/error.svelte-6922b742.js",
+    "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
+    "isEntry": true,
+    "imports": [
+      "_index-fdef72cc.js",
+      "_singletons-c41d2f92.js"
+    ]
+  },
+  "src/routes/+page.svelte": {
+    "file": "_app/immutable/components/pages/_page.svelte-6e07767d.js",
+    "src": "src/routes/+page.svelte",
+    "isEntry": true,
+    "imports": [
+      "_index-fdef72cc.js",
+      "_Subheader-7f9c2f72.js",
+      "_paths-b4419565.js"
+    ]
+  },
+  "_paths-b4419565.js": {
+    "file": "_app/immutable/chunks/paths-b4419565.js"
+  },
+  "_index-fdef72cc.js": {
+    "file": "_app/immutable/chunks/index-fdef72cc.js"
+  },
+  "_singletons-c41d2f92.js": {
+    "file": "_app/immutable/chunks/singletons-c41d2f92.js",
+    "imports": [
+      "_index-fdef72cc.js",
+      "_paths-b4419565.js"
+    ]
+  },
+  "_Subheader-7f9c2f72.js": {
+    "file": "_app/immutable/chunks/Subheader-7f9c2f72.js",
+    "imports": [
+      "_index-fdef72cc.js"
     ]
   },
   "src/routes/posts/[issue_id]/+page.svelte": {
-    "file": "_app/immutable/components/pages/posts/_issue_id_/_page.svelte-0c8573c8.js",
+    "file": "_app/immutable/components/pages/posts/_issue_id_/_page.svelte-d86461ea.js",
     "src": "src/routes/posts/[issue_id]/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-d021e39d.js",
-      "_marked.esm-0b02a870.js"
+      "_index-fdef72cc.js"
     ]
   },
   "src/routes/+layout.svelte": {
-    "file": "_app/immutable/components/pages/_layout.svelte-bdffe951.js",
+    "file": "_app/immutable/components/pages/_layout.svelte-1792d942.js",
     "src": "src/routes/+layout.svelte",
     "isEntry": true,
     "imports": [
-      "_index-d021e39d.js",
-      "_paths-6e6c7ca4.js"
+      "_index-fdef72cc.js",
+      "_Subheader-7f9c2f72.js",
+      "_paths-b4419565.js"
     ],
     "css": [
-      "_app/immutable/assets/_layout-93112f4d.css"
+      "_app/immutable/assets/_layout-6196db47.css"
     ]
   }
 }
